--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <title>Rock Paper Scissors Game</title>
     <meta name="description" content="The Odin Project game" />
     <meta name="author" content="Kemal Abdic" />
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="#" />
   </head>
 
   <body>
+    <div>
+      <button class="buttons">Rock</button>
+      <button class="buttons">Paper</button>
+      <button class="buttons">Scissors</button>
+    </div>
+    <div>
+      Player: <span id="playerCounter">0</span> Computer: <span id="computerCounter">0</span> Tie: <span id="tieCounter">0</span>
+    </div>
     <!-- your content here... -->
     <script src="js/app.js"></script>
   </body>
