--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Rock Paper Scissors Game</title>
-    <meta name="description" content="The Odin Project game" />
-    <meta name="author" content="Kemal Abdic" />
-    <link rel="shortcut icon" href="#" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
+    <meta name="description" content="The Odin Project game"/>
+    <meta name="author" content="Kemal Abdic"/>
+    <link rel="shortcut icon" href="#"/>
+    <link rel="stylesheet" href="style.css"/>
+</head>
 
-  <body>
-    <div class="headings">
-      <h1>Rock - Paper - Scissors</h1>
-      <h2>First one to FIVE (5) points WINS</h2>
-    </div>
-    <div class="options">
-      <button class="buttons">
-        <img src="resources/rock.png" height="200px" width="200px" />Rock
-      </button>
-      <button class="buttons">
-        <img src="resources/paper.png" height="200px" width="200px" />Paper
-      </button>
-      <button class="buttons">
-        <img src="resources/scissors.png" height="200px" width="200px" />Scissors
-      </button>
-    </div>
-    <div id="choices"></div>
-    <div class="results">
-      Player: <span id="playerCounter">0</span> Computer:
-      <span id="computerCounter">0</span> Tie: <span id="tieCounter">0</span>
-    </div>
+<body>
+<div class="headings">
+    <h1>Rock - Paper - Scissors</h1>
+    <h2>First one to FIVE (5) points WINS</h2>
+</div>
+<div class="options">
+    <button class="buttons">
+        <img src="resources/rock.png" alt="Rock" height="200px" width="200px"/>Rock
+    </button>
+    <button class="buttons">
+        <img src="resources/paper.png" alt="Paper" height="200px" width="200px"/>Paper
+    </button>
+    <button class="buttons">
+        <img src="resources/scissors.png" alt="Scissors" height="200px" width="200px"/>Scissors
+    </button>
+</div>
+<div id="choices"></div>
+<div class="results">
+    Player: <span id="playerCounter">0</span> Computer:
+    <span id="computerCounter">0</span> Tie: <span id="tieCounter">0</span>
+</div>
 
-    <!-- your content here... -->
-    <script src="js/app.js"></script>
-  </body>
+<!-- your content here... -->
+<script src="js/app.js"></script>
+</body>
 </html>
